--- a/personalwebsite/src/index.css
+++ b/personalwebsite/src/index.css
@@ -1,2 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import "tailwindcss";
+
+@theme{
+    --font-montserrat: "Montserrat", sans-serif;
+    --font-raleway: "Raleway", sans-serif;
+}
 /* *{border: 1px solid red} */
+
+html { scroll-behavior: smooth; }
